# cfddns

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
nixos/: module.nix
src/: cloudflare.rs  config.rs  ip.rs  main.rs
tests/: config.rs
