[package]
name = "cfddns"
version = "1.0.0"
edition = "2024"
authors = ["Alex Martens <alex@thinglab.org>"]
repository = "https://github.com/newAM/ddns_cloudflare"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
cloudflare = { version = "0.14.0", default-features = false, features = [
  "default-tls",
] }
futures = "0.3.31"
itertools = "0.14.0"
log = "0.4.28"
nix = { version = "0.30.1", default-features = false, features = ["net"] }
reqwest = { version = "0.12.28", default-features = false, features = [
  "default-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
systemd-journal-logger = "2.2.2"
tokio = { version = "1.48.0", features = ["macros", "rt"] }
url = { version = "2.5.7", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
